import string
from typing import List, Tuple, Dict, Optional

from app_configuration import AppConfiguration
from booking_repository import IBookingRepository, BookingRepository, BookingRepositoryError
from shared_data_models import Seat, SeatingPlan, SeatStatus

class SeatingPlanner:
    """
    Manages the seating plan logic, including booking,
    proposing seats, and confirming bookings.
    Each instance is associated with a specific seating plan title.
    """

    def __init__(
        self,
        title: str,
        num_rows: int,
        seats_per_row: int,
        db_path: str = "seating_planner.db",
        config: Optional[AppConfiguration] = None,
        repository: Optional[IBookingRepository] = None
    ):
        if not isinstance(title, str) or not title:
            raise ValueError("Title must be a non-empty string.")
        if not isinstance(num_rows, int) or num_rows <= 0:
            raise ValueError("Number of rows must be a positive integer.")
        if not isinstance(seats_per_row, int) or seats_per_row <= 0:
            raise ValueError("Seats per row must be a positive integer.")

        self.title: str = title
        self.num_rows: int = num_rows
        self.seats_per_row: int = seats_per_row
        self.config = config or AppConfiguration(raw_config={})
        self.status_map = SeatStatus.from_config(self.config)

        self._seating_plan: List[List[Seat]] = self._initialize_seating_plan()
        self._repository: IBookingRepository = repository or BookingRepository(db_path)
        self._confirmed_bookings: Dict[str, List[Tuple[int, int]]] = self._repository.load_all_bookings(self.title)
        self._apply_bookings_to_plan()

    def get_seating_plan(self, booking_id: Optional[str] = None) -> Optional[SeatingPlan]:
        """
        Returns the current seating plan.
        If booking_id is provided, marks those seats as 'proposed' (self.status_map["PROPOSED"]).
        If booking_id does not exist, returns None.
        """
        plan_copy: List[List[Seat]] = [
            [Seat(seat.row, seat.col, seat.status) for seat in row]
            for row in self._seating_plan
        ]
        available_count = sum(
            seat.status == self.status_map.AVAILABLE
            for row in plan_copy for seat in row
        )

        if booking_id:
            if booking_id not in self._confirmed_bookings:
                return None
            for r, c in self._confirmed_bookings[booking_id]:
                seat = plan_copy[r][c]
                if seat.status == self.status_map.BOOKED:
                    plan_copy[r][c] = Seat(r, c, self.status_map.PROPOSED)
            return SeatingPlan(title=self.title, plan=plan_copy, available_seats_count=available_count, booking_id=booking_id)

        return SeatingPlan(title=self.title, plan=plan_copy, available_seats_count=available_count)

    def book_seats(self, number_of_seats: int, start_seat: Optional[str] = None) -> str:
        """
        Book a number of seats, optionally starting from a specific seat.
        Returns the booking ID in the format <PREFIX><RUNNING NUMBER>.
        """
        if not isinstance(number_of_seats, int) or number_of_seats <= 0:
            raise ValueError("Number of seats must be a positive integer.")

        seats_to_book: List[Tuple[int, int]] = []
        rows_order: List[int] = list(range(self.num_rows - 1, -1, -1))  # Default order: closest to screen last
        col = None  # Initialize column tracking
        start_row = None  # Track the row of start_seat

        if start_seat:
            start_row, col = self._seat_label_to_indices(start_seat)

            # Step 1: Fill seats to the right of start_seat in its row
            for c in range(col, self.seats_per_row):
                if self._seating_plan[start_row][c].status == self.status_map.AVAILABLE:
                    seats_to_book.append((start_row, c))
                    if len(seats_to_book) == number_of_seats:
                        break

            if start_row in rows_order:
                idx = rows_order.index(start_row)
                rows_order = rows_order[idx:] + rows_order[:idx]
                rows_order.remove(start_row)  # Remove start row from the default order

        seats_needed = number_of_seats - len(seats_to_book)

        while seats_needed > 0 and rows_order:
            next_row = rows_order.pop(0)  # Move to the next row closer to the screen

            available_seats = [c for c, seat in enumerate(self._seating_plan[next_row]) if
                               seat.status == self.status_map.AVAILABLE]

            # Apply center-priority logic in the new row
            center = self.seats_per_row // 2
            available_seats.sort(key=lambda c: abs(c - center))

            for c in available_seats:
                if seats_needed > 0:
                    seats_to_book.append((next_row, c))
                    seats_needed -= 1
                else:
                    break

        if len(seats_to_book) < number_of_seats:
            raise ValueError("Not enough seats available to fulfill the booking.")

        # Generate booking ID
        prefix = self.config.get("booking_settings:booking_id_prefix", "BK")
        running_number = len(self._confirmed_bookings) + 1
        booking_id = f"{prefix}{running_number:04}"

        # Update in-memory plan
        for r, c in seats_to_book:
            self._seating_plan[r][c] = Seat(r, c, self.status_map.BOOKED)

        self._confirmed_bookings[booking_id] = seats_to_book

        try:
            self._repository.save_booking(self.title, booking_id, seats_to_book)
        except BookingRepositoryError as e:
            # Rollback in-memory state
            for r, c in seats_to_book:
                self._seating_plan[r][c] = Seat(r, c, self.status_map.AVAILABLE)
            del self._confirmed_bookings[booking_id]
            raise e

        return booking_id

    def cancel_booking(self, booking_id: str) -> str:
        """
        Cancel a booking by booking ID.
        """
        if booking_id not in self._confirmed_bookings:
            raise ValueError(f"Booking ID '{booking_id}' not found.")

        seats_to_unbook = self._confirmed_bookings[booking_id]
        for row, col in seats_to_unbook:
            if 0 <= row < self.num_rows and 0 <= col < self.seats_per_row:
                if self._seating_plan[row][col].status == self.status_map.BOOKED:
                    self._seating_plan[row][col] = Seat(row, col, self.status_map.AVAILABLE)
        del self._confirmed_bookings[booking_id]
        try:
            self._repository.delete_booking(self.title, booking_id)
        except BookingRepositoryError as e:
            # Rollback in-memory state
            for row, col in seats_to_unbook:
                self._seating_plan[row][col] = Seat(row, col, self.status_map.BOOKED)
            self._confirmed_bookings[booking_id] = seats_to_unbook
            raise e
        return booking_id

    def _initialize_seating_plan(self) -> List[List[Seat]]:
        return [
            [Seat(r, c, self.status_map.AVAILABLE) for c in range(self.seats_per_row)]
            for r in range(self.num_rows)
        ]

    def _apply_bookings_to_plan(self) -> None:
        """
        Apply all confirmed bookings to the seating plan.
        """
        for seats in self._confirmed_bookings.values():
            for row, col in seats:
                if 0 <= row < self.num_rows and 0 <= col < self.seats_per_row:
                    self._seating_plan[row][col] = Seat(row, col, self.status_map.BOOKED)

    def _seat_label_to_indices(self, seat_label: str) -> Tuple[int, int]:
        """
        Convert a seat label (e.g., 'A1') to (row, col) indices, reversing row order.
        """
        if not seat_label or len(seat_label) < 2:
            raise ValueError("Invalid seat label format.")
        row_char = seat_label[0].upper()
        if row_char not in string.ascii_uppercase:
            raise ValueError("Invalid row character in seat label.")
        row = ord(row_char) - ord('A')
        reversed_row = self.num_rows - 1 - row  # Reverse row indexing
        try:
            col = int(seat_label[1:]) - 1
        except ValueError:
            raise ValueError("Invalid column number in seat label.")
        if not (0 <= reversed_row < self.num_rows and 0 <= col < self.seats_per_row):
            raise ValueError("Seat label out of range.")
        return reversed_row, col
