' java.exe -jar C:\Apps\bin\plantuml.jar .\docs\main.puml
@startuml
class SeatingApp {
    - AppConfiguration app_configuration
    - ConsoleUi console_ui
    - SeatingPlanner seating_planner
    + SeatingApp(config_path: str)
    + start()
    - _run_event_loop()
    - _process_user_selection()
    - _handle_booking()
    - _handle_view_booking()
    - _exit_application()
}

class ConsoleUi {
    + prompt_for_application_start_details()
    + display_menu(seating_plan)
    + prompt_for_number_of_seats_to_book(seating_plan)
    + display_seating_map(seating_plan)
    + prompt_for_booking_confirmation()
    + prompt_for_booking_id()
    + display_exit_message()
}

class SeatingPlanner {
    + SeatingPlanner(title: str, number_of_rows: int, seats_per_row: int)
    + book_seats(number_of_seats: int, start_seat: Optional[str])
    + get_seating_plan(booking_id: Optional[int])
    + cancel_booking(booking_id: int)
}

class AppConfiguration {
    + AppConfiguration(config_path: str)
}

enum MenuOption {
    BOOK_SEATS
    VIEW_BOOKING
    EXIT
}

SeatingApp --> ConsoleUi
SeatingApp --> SeatingPlanner
SeatingApp --> AppConfiguration
ConsoleUi ..> SeatingPlanner : interacts
@enduml
